<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="auth_rerequested">Rerequested authorization from %1$s (%2$s)</string>
    <string name="auth_removed">Removed authorization from %1$s (%2$s)</string>
    <string name="auth_resent">Sent authorization to %1$s (%2$s)</string>
    <string name="contact_edit">Edit</string>
    <string name="contact_remove">Remove</string>
    <string name="contact_start_chat">Chat with</string>
    <string name="contact_add">Add</string>
    <string name="contact_editor">Edit contact</string>
    <string name="contact_details">Contact details</string>
    <string name="pref_entertosend_summary">If checked, then Enter will send your message</string>
    <string name="pref_entertosend_title">Enter to send</string>
    <string name="pref_autostart_title">Autostart</string>
    <string name="pref_autostart_summary">Connects after phone starts</string>
    <string name="showChatsButton">Show chats</string>
    <string name="chat_list_title">Active chats</string>
    <string name="app_name">Tigase Messenger</string>
    <string name="loginButton">Connect</string>
    <string name="logoutButton">Disconnect</string>
    <string name="propertiesButton">Settings</string>
    <string name="preferencesTitle">Settings</string>
    <string name="app_version">1.0-RC11</string>
    <string name="closeChatButton">Close chat</string>
    <string name="shareButton">Share</string>
    <string name="shareImageButton">Photo</string>
    <string name="shareVideoButton">Video</string>
    <string name="chatSendButton">Send</string>
    <string name="aboutButton">About</string>
    <string name="pref_login_section_title">Login data</string>
    <string name="pref_login_section_summary">Data needed to login to XMPP server</string>
    <string name="pref_advanced_section_title">Advanced settings</string>
    <string name="pref_advanced_section_summary">Advanced settings</string>
    <string name="pref_default_priority_summary">Online priority</string>
    <string name="pref_default_priority_title">Online priority</string>
    <string name="pref_default_priority_dialog">Enter online priority</string>
    <string name="pref_auto_away_priority_summary">Auto away priority</string>
    <string name="pref_auto_away_priority_title">Auto away priority</string>
    <string name="pref_auto_away_priority_dialog">Enter auto away priority</string>
    <string name="pref_keepalive_time_summary">Keep alive timeout</string>
    <string name="pref_keepalive_time_title">Keep alive timeout</string>
    <string name="pref_keepalive_time_dialog">Enter keep alive timeout</string>
    <string name="pref_reconnect_time_summary">Reconnect delay</string>
    <string name="pref_reconnect_time_title">Reconnect delay</string>
    <string name="pref_reconnect_time_dialog">Enter reconnect delay</string>
    <string name="pref_login_ui_section_title">User Interface</string>
    <string name="pref_login_ui_notification_title">Application icon</string>

    <!-- Label for this package -->
    <string name="label">Tigase XMPP</string>
    <string name="ui_authenticator_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string name="ui_activity_authenticating">Authenticating\u2026</string>
    <!-- Message shown in dialog if the username or password is invalid. -->
    <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. XMPP account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string name="login_activity_newaccount_text">Sign in to your XMPP account. </string>
    <string name="vcard_editor_activity_title">Personal informations</string>
    <string name="accountVCard">Personal informations</string>
    <string name="vcard_fullname">Full name</string>
    <string name="vcard_nickname">Nick</string>
    <string name="vcard_email">Email</string>
    <string name="vcard_birthday">Birthday</string>
    <string name="vcard_editor_refresh">Refresh</string>
    <string name="vcard_editor_publish">Publish</string>
    <string name="vcard_published_toast">Informations published</string>
    <string name="vcard_timeout_toast">Operation timed out</string>
    <string name="vcard_error_toast">Operation failed</string>
    <string name="vcard_retrieving">Loading. Please wait…</string>
    <string name="vcard_publishing">Publishing. Please wait…</string>
    <string name="incoming_file">Incoming file</string>
    <string name="incoming_file_from">Incoming file from</string>
    <string name="incoming_file_filename">Name</string>
    <string name="incoming_file_mimetype">Kind</string>
    <string name="incoming_file_filesize">Size</string>
    <string name="incoming_file_description">Description</string>
    <string name="incoming_file_store">Save file to</string>
    <string name="avatar">Avatar</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <string name="account_advanced_preferences">More settings&#8230;</string>
    <string name="mobile_optimizations">Mobile optimizations</string>
    <string name="presence_queue_max_timeout">Maximum presence queue timeout</string>
</resources>