<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:title="@string/loginButton" android:id="@+id/connectButton"  android:icon="@drawable/login"></item>
	<item android:icon="@drawable/logout"
		android:title="@string/logoutButton" android:id="@+id/disconnectButton"></item>
	<item android:icon="@android:drawable/ic_menu_preferences"
		android:id="@+id/propertiesButton" android:title="@string/propertiesButton"></item>
	<item android:icon="@android:drawable/ic_menu_close_clear_cancel"
		android:title="@string/closeChatButton" android:id="@+id/closeChatButton"></item>
	<item 
		android:title="@string/showChatsButton" android:id="@+id/showChatsButton"></item>
	<item 
		android:title="@string/aboutButton" android:icon="@android:drawable/ic_menu_info_details" android:id="@+id/aboutButton"></item>

</menu>
