<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
        android:title="@string/preferencesTitle" android:enabled="true" 
        android:key="key">
            <intent
                android:action="org.tigase.mobile.account.preference.MAIN" 
                android:targetClass="authenticator.AuthenticatorActivity.class" />
    </PreferenceScreen>    
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
        android:title="@string/accountVCard" android:enabled="true" 
        android:key="key">
            <intent
                android:action="org.tigase.mobile.account.personalInfo.EDIT" 
                android:targetClass="vcard.VCardEditorActivity.class" />
    </PreferenceScreen>    
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
        android:title="@string/account_advanced_preferences" android:enabled="true" 
        android:key="key">
            <intent
                android:action="org.tigase.mobile.account.advancedPreferences.EDIT" 
                android:targetClass="preferences.AccountAdvancedPreferencesActivity.class" />        
    </PreferenceScreen>
</PreferenceScreen>